--- a/index.html
+++ b/index.html
@@ -12,8 +12,18 @@
 <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-    
-    <!--1 fotos de perfil-->
+    <section>
+        <div Class="color"> </div>
+        <div Class="color"> </div>
+        <div Class="color"> </div>
+        <div class="box">
+            <div class="cuadro"styles="--i:0;"></div>
+            <div class="cuadro"styles="--i:1;"></div>
+            <div class="cuadro"styles="--i:2;"></div>
+            <div class="cuadro"styles="--i:3;"></div>
+            <div class="cuadro"styles="--i:4;"></div>
+            <div class="container">
+                <!--1 fotos de perfil-->
     <img class="profile-picture" src="profile.jpg" />
     <!--2 nombre de usuario-->
     <div class="profile-name">Madeline Sabino - Diseñadora UX/UI jr</div>
@@ -23,5 +33,8 @@
     <a href="https://mx.linkedin.com/in/manuel-alejandro-sabino-andres-695441212"class="links"><img src="https://img.icons8.com/nolan/64/linkedin.png"class="imagen"/>Linkedin</a>
     <a href="https://www.facebook.com/MADGRISMAD/"class="links"><img src="https://img.icons8.com/nolan/64/facebook.png"class="imagen"/>Facebook</a>
     <a href="https://github.com/MADGRISMAD"class="links"><img src="https://img.icons8.com/nolan/64/github.png"class="imagen"/>GitHub</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
