--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <!--1 fotos de perfil-->
     <img class="profile-picture" src="profile.jpg" />
     <!--2 nombre de usuario-->
-    <div class="profile-name">Madeline Sabino - Diseñadora UX/UI jr</div>
+    <div class="profile-name">Madeline Sabino * Diseñadora UX/UI jr</div>
     <!--3 links-->
     
     <a href="https://www.instagram.com/ux_ui.madelinesabino/"class="links"><img src="https://img.icons8.com/nolan/64/instagram-new.png"class="imagen"/>Instagram</a>
