--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="profile-name">Madeline Sabino <br> Diseñadora UX/UI jr</div>
                 <!--3 links-->
     
-                <a href="https://www.instagram.com/ux_ui.madelinesabino/"class="links"><img src="https://img.icons8.com/nolan/64/instagram-new.png"class="imagen"/>Instagram</a>
+                <a href="https://www.linkedin.com/in/madeline-griselda-sabino-andres-695441212/"class="links"><img src="https://img.icons8.com/nolan/64/instagram-new.png"class="imagen"/>Instagram</a>
                  <a href="https://mx.linkedin.com/in/manuel-alejandro-sabino-andres-695441212"class="links"><img src="https://img.icons8.com/nolan/64/linkedin.png"class="imagen"/>Linkedin</a>
                 <a href="https://www.facebook.com/MADGRISMAD/"class="links"><img src="https://img.icons8.com/nolan/64/facebook.png"class="imagen"/>Facebook</a>
                 <a href="https://github.com/MADGRISMAD"class="links"><img src="https://img.icons8.com/nolan/64/github.png"class="imagen"/>GitHub</a>
